--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,10 @@ buildscript {
 	ext {
 		kotlin_version = "1.7.0"
 		compose_version = "1.2.0"
+		compose_navigation_version = "2.5.1"
 		ksp_version = "1.7.0-1.0.6"
 		android_plugin_version = "7.2.2"
-		
+		kotlin_poet_version = "1.12.0"
 	}
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
