--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -58,7 +58,7 @@ dependencies {
 	implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
 	implementation "androidx.activity:activity-compose:1.5.1"
 
-	implementation "androidx.navigation:navigation-compose:2.5.1"
+	implementation "androidx.navigation:navigation-compose:$compose_navigation_version"
 
 	implementation(project(":api"))
 	ksp(project(":ksp"))
