--- a/ksp/build.gradle
+++ b/ksp/build.gradle
@@ -11,4 +11,6 @@ java {
 dependencies {
 	implementation(project(":api"))
 	implementation "com.google.devtools.ksp:symbol-processing-api:$ksp_version"
+	implementation "com.squareup:kotlinpoet:$kotlin_poet_version"
+	implementation "com.squareup:kotlinpoet-ksp:$kotlin_poet_version"
 }
