Create separate module for sub graph in demo and fix nav controller handling over multiple modules

--- a/settings.gradle
+++ b/settings.gradle
@@ -13,6 +13,8 @@ dependencyResolutionManagement {
 	}
 }
 rootProject.name = "NavGraph Config Compose"
-include ':demo'
+include ':demo:app'
 include ':api'
 include ':ksp'
+include ':demo:wizard'
+include ':runtime'
