--- a/demo/wizard/build.gradle
+++ b/demo/wizard/build.gradle
@@ -1,29 +1,25 @@
 plugins {
-	id "com.android.application"
-	id "org.jetbrains.kotlin.android"
+	id 'com.android.library'
+	id 'org.jetbrains.kotlin.android'
 	id "com.google.devtools.ksp" version "$ksp_version"
 }
 
 android {
-	compileSdk 32
+	namespace 'io.redandroid.navigator.demo.wizard'
+	compileSdk 33
 
 	defaultConfig {
-		applicationId "de.gnarly.navgraph.config"
 		minSdk 21
-		targetSdk 32
-		versionCode 1
-		versionName "1.0"
+		targetSdk 33
 
 		testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-		vectorDrawables {
-			useSupportLibrary true
-		}
+		consumerProguardFiles "consumer-rules.pro"
 	}
 
 	buildTypes {
 		release {
 			minifyEnabled false
-			proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
+			proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 		}
 	}
 	compileOptions {
@@ -31,18 +27,13 @@ android {
 		targetCompatibility JavaVersion.VERSION_1_8
 	}
 	kotlinOptions {
-		jvmTarget = "1.8"
+		jvmTarget = '1.8'
 	}
 	buildFeatures {
 		compose true
 	}
 	composeOptions {
 		kotlinCompilerExtensionVersion compose_version
-	}
-	packagingOptions {
-		resources {
-			excludes += "/META-INF/{AL2.0,LGPL2.1}"
-		}
 	}
 	sourceSets.configureEach {
 		kotlin.srcDir("$buildDir/generated/ksp/$name/kotlin/")
@@ -51,18 +42,13 @@ android {
 
 dependencies {
 
-	implementation "androidx.core:core-ktx:1.8.0"
+	implementation 'androidx.core:core-ktx:1.8.0'
 	implementation "androidx.compose.ui:ui:$compose_version"
 	implementation "androidx.compose.material:material:$compose_version"
-	implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-	implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
-	implementation "androidx.activity:activity-compose:1.5.1"
 
 	implementation "androidx.navigation:navigation-compose:$compose_navigation_version"
 
 	implementation(project(":api"))
+	implementation(project(":runtime"))
 	ksp(project(":ksp"))
-
-	debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-	debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 }
