--- a/settings.gradle
+++ b/settings.gradle
@@ -12,7 +12,7 @@ dependencyResolutionManagement {
 		mavenCentral()
 	}
 }
-rootProject.name = "NavGraph Config Compose"
+rootProject.name = "Compose Navigator"
 include ':demo:app'
 include ':api'
 include ':ksp'
