--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,15 +31,15 @@ jobs:
       - name: Upload API
         uses: actions/upload-artifact@v1
         with:
-          name: navigator-api
-          path: api/build/libs/api.jar
+          name: compose-navigator-api
+          path: compose-navigator-api/build/libs/compose-navigator-api.jar
       - name: Upload Runtime
         uses: actions/upload-artifact@v1
         with:
-          name: navigator-runtime
-          path: runtime/build/outputs/aar/runtime-release.aar
+          name: compose-navigator-runtime
+          path: compose-navigator-runtime/build/outputs/aar/compose-navigator-runtime-release.aar
       - name: Upload KSP
         uses: actions/upload-artifact@v1
         with:
-          name: navigator-ksp
-          path: ksp/build/libs/ksp.jar
+          name: compose-navigator-ksp
+          path: compose-navigator-ksp/build/libs/compose-navigator-ksp.jar
