--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,19 +1,21 @@
 [versions]
 compose-navigator = "1.0.2-SNAPSHOT"
+android-sdk-min = "21"
+android-sdk-target = "34"
 
-java = "11"
-kotlin = "1.8.21"
+java = "17"
+kotlin = "1.9.22"
 
-android-plugin = "7.4.2"
-compose-bom = "2023.05.01"
-compose-navigation = "2.5.3"
-compose-compiler = "1.4.7"
-android-core = "1.10.1"
-android-lifecycle-runtime = "2.6.1"
-android-activity-compose = "1.7.1"
+android-plugin = "8.2.2"
+compose-bom = "2024.01.00"
+compose-navigation = "2.7.6"
+compose-compiler = "1.5.8"
+android-core = "1.12.0"
+android-lifecycle-runtime = "2.7.0"
+android-activity-compose = "1.8.2"
 
-ksp = "1.8.21-1.0.11"
-kotlinpoet = "1.13.2"
+ksp = "1.9.22-1.0.16"
+kotlinpoet = "1.14.2"
 
 [libraries]
 android-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "android-core" }
