Allow adding loosely couples destinations in a feature module, that can be added to the NavHost

--- a/settings.gradle
+++ b/settings.gradle
@@ -20,3 +20,4 @@ include ':demo:wizard'
 include ':compose-navigator-api'
 include ':compose-navigator-ksp'
 include ':compose-navigator-runtime'
+include ':demo:destination-feature'
