--- a/settings.gradle
+++ b/settings.gradle
@@ -15,8 +15,10 @@ dependencyResolutionManagement {
 	}
 }
 rootProject.name = "Compose Navigator"
+includeBuild("build-common")
 include ':demo:app'
 include ':demo:wizard'
 include ':compose-navigator-api'
 include ':compose-navigator-ksp'
 include ':compose-navigator-runtime'
+include ':demo:destination-feature'
