--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -51,7 +51,7 @@ google-truth = { group = "com.google.truth", name = "truth", version.ref = "goog
 android-application = { id = "com.android.application", version.ref = "android-plugin" }
 android-library = { id = "com.android.library", version.ref = "android-plugin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 publish-jvm = { id = "de.onecode.publish-jvm", version.ref = "build-common" }
 publish-android = { id = "de.onecode.publish-android", version.ref = "build-common" }
+kotlin-config-jvm = { id = "de.onecode.koltin-config-jvm", version.ref = "build-common" }
