--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,8 +56,8 @@ jobs:
       - name: Publish to Maven (on main branch)
         # if: ${{ github.ref == 'refs/heads/main' }}   // TODO enable be before merging, just for testing now
         run: |
-          echo $SIGNING_KEY_FILE_BASE64 | base64 -d > secring.gpg
-          ./gradlew publish -Psigning.password=$SIGNING_PASSWORD -Psigning.keyId=$SIGNING_KEY_ID -Psigning.secretKeyRingFile=secring.gpg
+          echo $SIGNING_KEY_FILE_BASE64 | base64 -d > ${{ github.workspace }}/secring.gpg
+          ./gradlew publish -Psigning.password=$SIGNING_PASSWORD -Psigning.keyId=$SIGNING_KEY_ID -Psigning.secretKeyRingFile=${{ github.workspace }}/secring.gpg
         env:
           MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
