--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Publish to Maven (on main branch)
         # if: ${{ github.ref == 'refs/heads/main' }}   // TODO enable be before merging, just for testing now
         run: |
-          echo $SIGNING_KEY_FILE_BASE64 | base64 -d > ${{ github.workspace }}/secring.gpg
+          echo -n $SIGNING_KEY_FILE_BASE64 | base64 -d -o ${{ github.workspace }}/secring.gpg
           ./gradlew publish -Psigning.password=$SIGNING_PASSWORD -Psigning.keyId=$SIGNING_KEY_ID -Psigning.secretKeyRingFile=${{ github.workspace }}/secring.gpg
         env:
           MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
