--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,4 +63,4 @@ jobs:
           MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
           SIGNING_KEY_ID: ${{secrets.SIGNING_KEY_ID }}
           SIGNING_PASSWORD: ${{secrets.SIGNING_PASSWORD }}
-          SIGNING_KEY_FILE_BASE64: ${{ secrets.SINGING_KEY_FILE_BASE64 }}
+          SIGNING_KEY_FILE_BASE64: ${{ secrets.SIGNING_KEY_FILE_BASE64 }}
