--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,7 +57,7 @@ jobs:
         # if: ${{ github.ref == 'refs/heads/main' }}   // TODO enable be before merging, just for testing now
         run: |
           echo -n $SIGNING_KEY_FILE_BASE64 | base64 -d > ${{ github.workspace }}/secring.gpg
-          ./gradlew publish -Psigning.password=$SIGNING_PASSWORD -Psigning.keyId=$SIGNING_KEY_ID -Psigning.secretKeyRingFile=${{ github.workspace }}/secring.gpg
+          ./gradlew publish -Psigning.password="$SIGNING_PASSWORD" -Psigning.keyId="$SIGNING_KEY_ID" -Psigning.secretKeyRingFile="${{ github.workspace }}/secring.gpg"
         env:
           MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
