Cleanup and unify Gradle build configuration

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,6 @@ concurrency:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -54,3 +53,14 @@ jobs:
         with:
           name: compass-ksp
           path: compass/ksp/build/libs/compass-ksp.jar
+      - name: Publish to Maven
+        if: ${{ github.ref == 'refs/heads/main' }}
+        run: |
+          echo -n $SIGNING_KEY_FILE_BASE64 | base64 -d > ${{ github.workspace }}/secring.gpg
+          ./gradlew publish -Psigning.password="$SIGNING_PASSWORD" -Psigning.keyId="$SIGNING_KEY_ID" -Psigning.secretKeyRingFile="${{ github.workspace }}/secring.gpg"
+        env:
+          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+          SIGNING_KEY_ID: ${{secrets.SIGNING_KEY_ID }}
+          SIGNING_PASSWORD: ${{secrets.SIGNING_PASSWORD }}
+          SIGNING_KEY_FILE_BASE64: ${{ secrets.SIGNING_KEY_FILE_BASE64 }}
