--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,17 +1,18 @@
 [versions]
-build-common = "1.0.0"
 compass = "1.2.0-SNAPSHOT"
+build-common = "1.0.0"
 
+kotlin = "1.9.22"
+java = "17"
+
+android-plugin = "8.2.2"
 android-sdk-min = "21"
 android-sdk-target = "34"
 
-java = "17"
-kotlin = "1.9.22"
+compose-compiler = "1.5.8"
 
-android-plugin = "8.2.2"
 compose-bom = "2024.01.00"
 compose-navigation = "2.7.6"
-compose-compiler = "1.5.8"
 android-core = "1.12.0"
 android-lifecycle-runtime = "2.7.0"
 android-activity-compose = "1.8.2"
@@ -24,6 +25,10 @@ junit = "5.10.2"
 google-truth = "1.4.0"
 
 [libraries]
+android-library-plugin = { group = "com.android.library", name = "com.android.library.gradle.plugin", version.ref = "android-plugin" }
+android-application-plugin = { group = "com.android.application", name = "com.android.application.gradle.plugin", version.ref = "android-plugin" }
+kotlin-jvm-plugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
+
 android-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "android-core" }
 android-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "android-lifecycle-runtime" }
 android-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "android-activity-compose" }
@@ -49,9 +54,13 @@ google-truth = { group = "com.google.truth", name = "truth", version.ref = "goog
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "android-plugin" }
-android-library = { id = "com.android.library", version.ref = "android-plugin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+
 publish-jvm = { id = "de.onecode.publish-jvm", version.ref = "build-common" }
 publish-android = { id = "de.onecode.publish-android", version.ref = "build-common" }
+kotlin-config-jvm = { id = "de.onecode.koltin-config-jvm", version.ref = "build-common" }
+android-app = { id = "de.onecode.android-app", version.ref = "build-common" }
+android-library = { id = "de.onecode.android-library", version.ref = "build-common" }
+android-compose = { id = "de.onecode.android-compose", version.ref = "build-common" }
