--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,7 +21,7 @@ ksp = "1.9.22-1.0.16"
 kotlinpoet = "1.14.2"
 
 junit = "5.10.2"
-
+mockk = "1.13.9"
 google-truth = "1.4.0"
 
 [libraries]
@@ -49,6 +49,8 @@ kotlinpoet-ksp = { group = "com.squareup", name = "kotlinpoet-ksp", version.ref 
 junit-bom = { group = "org.junit", name = "junit-bom", version.ref = "junit" }
 junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter" }
 junit-platform-launcher = { group = "org.junit.platform", name = "junit-platform-launcher" }
+
+mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
 
 google-truth = { group = "com.google.truth", name = "truth", version.ref = "google-truth" }
 
