--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,8 +11,8 @@ android-sdk-target = "34"
 
 compose-compiler = "1.5.8"
 
-compose-bom = "2024.01.00"
-compose-navigation = "2.7.6"
+compose-bom = "2024.02.00"
+compose-navigation = "2.7.7"
 android-core = "1.12.0"
 android-lifecycle-runtime = "2.7.0"
 android-activity-compose = "1.8.2"
@@ -21,8 +21,10 @@ ksp = "1.9.22-1.0.16"
 kotlinpoet = "1.14.2"
 
 junit = "5.10.2"
-
+mockk = "1.13.9"
 google-truth = "1.4.0"
+
+detekt = "1.23.3"
 
 [libraries]
 android-library-plugin = { group = "com.android.library", name = "com.android.library.gradle.plugin", version.ref = "android-plugin" }
@@ -50,7 +52,11 @@ junit-bom = { group = "org.junit", name = "junit-bom", version.ref = "junit" }
 junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter" }
 junit-platform-launcher = { group = "org.junit.platform", name = "junit-platform-launcher" }
 
+mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
+
 google-truth = { group = "com.google.truth", name = "truth", version.ref = "google-truth" }
+
+detekt = { group = "io.gitlab.arturbosch.detekt", name = "detekt-gradle-plugin", version.ref = "detekt" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "android-plugin" }
