Update detekt rule

--- a/build-common/src/main/resources/detekt.yml
+++ b/build-common/src/main/resources/detekt.yml
@@ -42,6 +42,8 @@ style:
   UnusedPrivateMember:
     ignoreAnnotated:
       - 'Preview'
+  UseIfInsteadOfWhen:
+    active: false
 
 performance:
   SpreadOperator:
