--- a/build-common/src/main/resources/detekt.yml
+++ b/build-common/src/main/resources/detekt.yml
@@ -17,6 +17,8 @@ complexity:
   LongMethod:
     excludes:
       - "**/test/**"
+  LongParameterList:
+    functionThreshold: 7
 
 naming:
   FunctionNaming:
